--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.11"
   },
