--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuesimple/vs-alert": "^1.4.13",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "core-js": "^3.3.2",
+    "dayjs": "^1.11.7",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.1.3",
