--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.1.3",
+    "vuesax": "^4.0.1-alpha.25",
     "vuetify": "^2.1.11"
   },
   "devDependencies": {
@@ -41,7 +42,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
